@@ -1,3 +1,7 @@
+2006-04-23  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* Added PanelApplet#set_flags.[Patch #1431855]
+
 2005-10-10  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* extconf.rb, rbpanel-applet.c: Added PanelApplet::BUILD_VERSION. 
